bugfix for text overflow on mobile

--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@
 
 }
 
+html, body {
+    overflow-x:hidden
+  }
+
 .dev-test {
     background-color: #f9eb6d;
 }
@@ -189,7 +193,6 @@ nav .icon-Stu {
 
 #about .about-text  {
     padding: 5px;
-    min-width: 400px;
     max-width: 60%;
 }
 
@@ -306,7 +309,7 @@ button:hover {
 }
 
 #message {
-    width: 500px;
+    width: 60%;
 }
 
 #contact img {
